fix(DashboardDropdown.tsx): handle error state by setting loading to false style(Dailysummary.tsx): update table cell text size and content to improve readability style(Table.tsx): update table cell content to include month and year for better context feat(Linechart.tsx): add support for DailySpend data type in chartData prop feat(useObserveQuery.ts): create custom hook to observe query with initial data style(index.css): comment out background-color property for further evaluation feat(Dashboard.tsx): update chart data and component names for Total Spend and Total Profit feat(routes/index.tsx): add conditional rendering based on user authentication status feat(interface.ts): add DailySpend interface and update SalesData interface with dailySpend array

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  /* background-color: #242424; */
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -79,7 +79,7 @@ button:focus-visible {
     scrollbar-width: none; /* Firefox */
   }
   .table-heading {
-    @apply border border-gray-200 text-left;
+    @apply border border-gray-200 text-left text-sm font-semibold;
   }
   .chart-container {
     @apply w-full bg-white/50  border-gray-500 rounded-xl flex items-center  flex-col p-1;
